Fix spacing.

--- a/resources/style.css
+++ b/resources/style.css
@@ -52,7 +52,7 @@ p {
   font-weight:bold;
   text-decoration:underline;
   color:white;
-  font-size: 11px;
+  font-size: 14px;
 }
 
 .box {
